# goop

./: .gitignore  Cargo.toml  README.md
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: index.tsx
app/frontend/src/pages/: _404.tsx
app/src/: config.rs  keystore.rs
app/src/api/routes/: cids.rs
app/src/swarm/: behaviour.rs  state.rs
app/src/swarm/task/: events.rs
apps/cli/: Cargo.toml
apps/cli/frontend/: package.json
apps/cli/src/: consts.rs  main.rs
apps/cli/src/api/routes/: frontend.rs  keys.rs
apps/cli/src/swarm/: behaviour.rs
apps/cli/src/swarm/task/: events.rs  requests.rs
crates/beetswap/: Cargo.toml
crates/beetswap/examples/: node.rs
crates/beetswap/src/: builder.rs  cid_prefix.rs  client.rs  incoming_stream.rs  lib.rs  message.rs  multihasher.rs  server.rs  test_utils.rs  utils.rs  wantlist.rs
crates/beetswap/src/proto/: message.proto  message.rs  mod.rs
crates/beetswap/tests/: bitswap.rs
crates/beetswap/tests/utils/: mod.rs
goop/: Cargo.toml
goop-cli/: Cargo.toml
goop-cli/src/: keystore.rs
goop-cli/src/api/routes/: frontend.rs  ipns.rs  keys.rs
goop-cli/src/swarm/: util.rs
goop-cli/src/swarm/task/: mod.rs  requests.rs
goop/frontend/: package-lock.json
goop/src/api/routes/: build.rs  ipns.rs
goop/src/swarm/: mod.rs
kad-redb/: Cargo.toml
kad-redb/src/: lib.rs
src/: cli.rs  config.rs  consts.rs  main.rs
src/api/: frontend.rs  mod.rs  routes.rs  task.rs
src/api/routes/: build.rs  cids.rs  ipns.rs  mod.rs
src/swarm/: behaviour.rs  consts.rs  mod.rs  state.rs  task.rs  types.rs  util.rs
src/swarm/task/: events.rs  mod.rs  requests.rs  types.rs
