[workspace]
resolver = "3"
members = ["crates/kad-redb", "apps/cli"]

[workspace.dependencies]
kad-redb = { path = "crates/kad-redb" }
redb = "2.6.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
rpath = false
overflow-checks = false
