[package]
name = "kad-redb"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56.0", default-features = false, features = ["serde"] }
libp2p-identity = { version = "0.2.13", features = ["serde"] }
libp2p-kad = { version = "0.48.0", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
redb = "2.6.3"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.25.0"
